Revert "Revert "Gjoranv/java9 prep 05""